Added empiric generator analysis